added references.text, index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,114 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link href="style.css" type="text/css" rel="stylesheet"/>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <header><h1>Cherished Children's Learning Aids</h1></header>
+      <img class="nephews" src="https://www.dropbox.com/s/nomszq58fj8p088/Asher%2BEverett.jpeg?dl=0">
+
+      <main>
+         <div class="story"> 
+            <p><h2>Spending time with my young nephews has brought back memories of my own childhood. This webpage highlights some great (older) content that remains relevent today. I look forward to sharing these four special programs with them soon.</h2></p>
+ 
+            <h3>Reading Rainbow</h3>
+            <p>A show that debuted in 1983 that used television programming to inspire a love of reading and building a lasting connection between kids and books. The literacy series starred LeVar Burton and each episode focused on a different book/relevent educational theme. </p>
+            <article class="reading-rainbow">
+               <div>
+                  <p>"take a look, it's in a book, a Reading Rainbow"</p>
+                  <iframe width="420" height="315"
+                  src="https://www.youtube.com/watch?v=OAIW5se_cxg">
+                  </iframe><br>
+                  <cite>(Reading rainbow (extended TV series theme song, sung by Tina Fabrique) 2022)</cite>
+               </div>
+            </article>
+
+            <h3>Zoobilee Zoo</h3>
+            <p>Zoobilee Zoo was a TV show that debuted in 1986 about seven animals, the Zoobles, who spent each episode experiencing difficulties and learning moral lessons that apply to young children. The main characters highlighted different areas dealing with: dramatic performing arts, reading and writing, art and painting, music and dance, inventions, imagination and adventures.</p>
+            <article class="zoobilee-zoo">
+               <div>
+                  <p>"magic and wonder are waiting for you"</p>
+                  <iframe width="420" height="315"
+                  src="https://www.youtube.com/watch?v=oowOsEOTApA">
+                  </iframe><br>
+                  <cite>(Zoobilee Zoo theme song (HQ) 2012)</cite>
+               </div>
+            </article>
+
+            <h3>Fraggle Rock</h3>
+            <p>An inventive TV program by Jim Henson, that also debuted in 1983, was designed to entertain while encouraging an understanding and embracing of diversity. The show used the Fraggles and musical features as an allegory to deal with serious issues such as prejudice, spirituality, personal identity, the environment, and social conflict.</p>
+            <article class="fraggle-rock">
+               <div>
+                  <p>"let the music play, down in Fraggle Rock"</p>
+                  <iframe width="420" height="315"
+                  src=" https://www.youtube.com/watch?v=KLQS6xo40kI">
+                  </iframe><br>
+                  <cite>(Opening theme - fraggle rock - the jim henson company 2013)</cite>
+               </div>
+            </article>
+
+            <h3>Free To Be You And Me</h3>
+            <p>In 1972, a hit record and TV special lead to a 1974 hit movie and book of Skits and songs all about encouraging "gender neutrality ...[and] saluting values such as individuality, tolerance, and comfort with one's identity" and overall,"that anyone — whether a boy or a girl — can achieve anything."</p>
+            <article class="free-to-be">
+               <div>
+                  <p>"take my hand, come with me, where the children are free"</p>
+                  <iframe width="420" height="315"
+                  src="https://www.youtube.com/watch?v=7PS3nOcLbHI">
+                  </iframe><br>
+                  <cite>(KABC-TV7 (1974) "free to be you &amp; me!" original broadcast!!!! 2021)</cite>
+               </div>
+            </article>
+         </div>  
+      </main>
+     
+      <!-- <article class="reading-rainbow">
+         <div>
+            <h3>Reading Rainbow</h3>
+            <p>"take a look, it's in a book, a Reading Rainbow"</p>
+            <iframe width="420" height="315"
+            src="https://www.youtube.com/watch?v=OAIW5se_cxg">
+            </iframe><br>
+            <cite>(Reading rainbow (extended TV series theme song, sung by Tina Fabrique) 2022)</cite>
+         </div>
+      </article>
+
+      <article class="zoobilee-zoo">
+         <div>
+            <h3>Zoobilee Zoo</h3>
+            <p>"magic and wonder are waiting for you"</p>
+            <iframe width="420" height="315"
+            src="https://www.youtube.com/watch?v=oowOsEOTApA">
+            </iframe><br>
+            <cite>(Zoobilee Zoo theme song (HQ) 2012)</cite>
+         </div>
+      </article>
+
+      <article class="fraggle-rock">
+         <div>
+            <h3>Fraggle Rock</h3>
+            <p>"let the music play, down in Fraggle Rock"</p>
+            <iframe width="420" height="315"
+            src=" https://www.youtube.com/watch?v=KLQS6xo40kI">
+            </iframe><br>
+            <cite>(Opening theme - fraggle rock - the jim henson company 2013)</cite>
+         </div>
+      </article>
+
+      <article class="free-to-be">
+         <div>
+            <h3>Free To Be You And Me</h3>
+            <p>"take my hand, come with me, where the children are free"</p>
+            <iframe width="420" height="315"
+            src="https://www.youtube.com/watch?v=7PS3nOcLbHI">
+            </iframe><br>
+            <cite>(KABC-TV7 (1974) "free to be you &amp; me!" original broadcast!!!! 2021)</cite>
+         </div>
+      </article> -->
+
    </body>
+   <footer>
+      <!-- entity for the copyright symbol (©) is &copy; -->
+      <p>LC101 Graded Assignment #4: HTML_Me_Something<br/>© 2023 E. Chassin</p>
+  </footer>
 </html>
