style.css updates

--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
    </head>
    <body>
       <!-- Write your HTML in this file! -->
-      <header><h1>Cherished Children's Learning Aids</h1></header>
-      <img class="nephews" src="https://www.dropbox.com/s/nomszq58fj8p088/Asher%2BEverett.jpeg?dl=0">
+      <header id="main-heading"><h1>Cherished Children's Learning Resources</h1></header>
+      <img class="nephews" src="https://www.dropbox.com/s/nomszq58fj8p088/Asher%2BEverett.jpeg?dl=0"><br /><cite>(E. Chassin, 2022)</cite>
 
-      <main>
-         <div class="story"> 
-            <p><h2>Spending time with my young nephews has brought back memories of my own childhood. This webpage highlights some great (older) content that remains relevent today. I look forward to sharing these four special programs with them soon.</h2></p>
- 
+      <main class="assignment">
+         <div id="story" class="story"> 
+            <p id="test-p" class="fun-paragraph"><h2>Spending time with my young nephews has brought back memories of my own childhood. This webpage highlights some great (older) content that remains relevent today. I look forward to sharing these four special programs with them soon.</h2></p>
+         
+         <section id="reading-rainbow">
             <h3>Reading Rainbow</h3>
-            <p>A show that debuted in 1983 that used television programming to inspire a love of reading and building a lasting connection between kids and books. The literacy series starred LeVar Burton and each episode focused on a different book/relevent educational theme. </p>
+            <p>A show that debuted in 1983 that used television programming to inspire a love of reading and building a lasting connection between kids and books. The literacy series starred LeVar Burton and each episode focused on a different book/relevent educational theme. <cite>(Reading rainbow, 2023)</cite></p>
             <article class="reading-rainbow">
                <div>
                   <p>"take a look, it's in a book, a Reading Rainbow"</p>
-                  <iframe width="420" height="315"
-                  src="https://www.youtube.com/watch?v=OAIW5se_cxg">
-                  </iframe><br>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/OAIW5se_cxg" title="YouTube video player" frameborder="0"></iframe><br>
                   <cite>(Reading rainbow (extended TV series theme song, sung by Tina Fabrique) 2022)</cite>
                </div>
             </article>
+         </section>
 
+         <section id="zoobilee-zoo">
             <h3>Zoobilee Zoo</h3>
-            <p>Zoobilee Zoo was a TV show that debuted in 1986 about seven animals, the Zoobles, who spent each episode experiencing difficulties and learning moral lessons that apply to young children. The main characters highlighted different areas dealing with: dramatic performing arts, reading and writing, art and painting, music and dance, inventions, imagination and adventures.</p>
+            <p>Zoobilee Zoo was a TV show that debuted in 1986 about seven animals, the Zoobles, who spent each episode experiencing difficulties and learning moral lessons that apply to young children. The main characters highlighted different areas dealing with: dramatic performing arts, reading and writing, art and painting, music and dance, inventions, imagination and adventures. <cite>(Zoobilee Zoo, 2022)</cite></p>
             <article class="zoobilee-zoo">
                <div>
                   <p>"magic and wonder are waiting for you"</p>
@@ -35,9 +36,11 @@
                   <cite>(Zoobilee Zoo theme song (HQ) 2012)</cite>
                </div>
             </article>
+         </section>
 
+         <section id="fraggle-rock">
             <h3>Fraggle Rock</h3>
-            <p>An inventive TV program by Jim Henson, that also debuted in 1983, was designed to entertain while encouraging an understanding and embracing of diversity. The show used the Fraggles and musical features as an allegory to deal with serious issues such as prejudice, spirituality, personal identity, the environment, and social conflict.</p>
+            <p>An inventive TV program by Jim Henson, that also debuted in 1983, was designed to entertain while encouraging an understanding and embracing of diversity. The show used the Fraggles and musical features as an allegory to deal with serious issues such as prejudice, spirituality, personal identity, the environment, and social conflict. <cite>(Fraggle Rock, 2022 & 2023)</cite></p>
             <article class="fraggle-rock">
                <div>
                   <p>"let the music play, down in Fraggle Rock"</p>
@@ -47,9 +50,11 @@
                   <cite>(Opening theme - fraggle rock - the jim henson company 2013)</cite>
                </div>
             </article>
+         </section>
 
+         <section id="free-to-be">
             <h3>Free To Be You And Me</h3>
-            <p>In 1972, a hit record and TV special lead to a 1974 hit movie and book of Skits and songs all about encouraging "gender neutrality ...[and] saluting values such as individuality, tolerance, and comfort with one's identity" and overall,"that anyone — whether a boy or a girl — can achieve anything."</p>
+            <p>In 1972, a hit record and TV special lead to a 1974 hit movie and book of Skits and songs all about encouraging "gender neutrality ...[and] saluting values such as individuality, tolerance, and comfort with one's identity" and overall,"that anyone — whether a boy or a girl — can achieve anything" <cite>(Free to be... you and me, 2023).</cite></p>
             <article class="free-to-be">
                <div>
                   <p>"take my hand, come with me, where the children are free"</p>
@@ -59,6 +64,8 @@
                   <cite>(KABC-TV7 (1974) "free to be you &amp; me!" original broadcast!!!! 2021)</cite>
                </div>
             </article>
+         </section>
+
          </div>  
       </main>
      
@@ -72,6 +79,8 @@
             <cite>(Reading rainbow (extended TV series theme song, sung by Tina Fabrique) 2022)</cite>
          </div>
       </article>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OAIW5se_cxg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
       <article class="zoobilee-zoo">
          <div>
