--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link href="style.css" type="text/css" rel="stylesheet"/>
+      <link href="styles.css" type="text/css" rel="stylesheet"/>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
@@ -10,11 +10,11 @@
 
       <main class="assignment">
          <div id="story" class="story"> 
-            <p id="test-p" class="fun-paragraph"><h2>Spending time with my young nephews has brought back memories of my own childhood. This webpage highlights some great (older) content that remains relevent today. I look forward to sharing these four special programs with them soon.</h2></p>
+            <p id="test-p"><h2 class="fun-paragraph">Spending time with my young nephews has brought back memories of my own childhood. This webpage highlights some great (older) content that remains relevent today. I look forward to sharing these four special programs with them soon.</h2></p>
          
          <section id="reading-rainbow">
             <h3>Reading Rainbow</h3>
-            <p>A show that debuted in 1983 that used television programming to inspire a love of reading and building a lasting connection between kids and books. The literacy series starred LeVar Burton and each episode focused on a different book/relevent educational theme. <cite>(Reading rainbow, 2023)</cite></p>
+            <p id="p1">A show that debuted in 1983 that used television programming to inspire a love of reading and building a lasting connection between kids and books. The literacy series starred LeVar Burton and each episode focused on a different book/relevent educational theme. <cite>(Reading rainbow, 2023)</cite></p>
             <article class="reading-rainbow">
                <div>
                   <p>"take a look, it's in a book, a Reading Rainbow"</p>
@@ -26,7 +26,7 @@
 
          <section id="zoobilee-zoo">
             <h3>Zoobilee Zoo</h3>
-            <p>Zoobilee Zoo was a TV show that debuted in 1986 about seven animals, the Zoobles, who spent each episode experiencing difficulties and learning moral lessons that apply to young children. The main characters highlighted different areas dealing with: dramatic performing arts, reading and writing, art and painting, music and dance, inventions, imagination and adventures. <cite>(Zoobilee Zoo, 2022)</cite></p>
+            <p id="p2">Zoobilee Zoo was a TV show that debuted in 1986 about seven animals, the Zoobles, who spent each episode experiencing difficulties and learning moral lessons that apply to young children. The main characters highlighted different areas dealing with: dramatic performing arts, reading and writing, art and painting, music and dance, inventions, imagination and adventures. <cite>(Zoobilee Zoo, 2022)</cite></p>
             <article class="zoobilee-zoo">
                <div>
                   <p>"magic and wonder are waiting for you"</p>
@@ -40,7 +40,7 @@
 
          <section id="fraggle-rock">
             <h3>Fraggle Rock</h3>
-            <p>An inventive TV program by Jim Henson, that also debuted in 1983, was designed to entertain while encouraging an understanding and embracing of diversity. The show used the Fraggles and musical features as an allegory to deal with serious issues such as prejudice, spirituality, personal identity, the environment, and social conflict. <cite>(Fraggle Rock, 2022 & 2023)</cite></p>
+            <p id="p3">An inventive TV program by Jim Henson, that also debuted in 1983, was designed to entertain while encouraging an understanding and embracing of diversity. The show used the Fraggles and musical features as an allegory to deal with serious issues such as prejudice, spirituality, personal identity, the environment, and social conflict. <cite>(Fraggle Rock, 2022 & 2023)</cite></p>
             <article class="fraggle-rock">
                <div>
                   <p>"let the music play, down in Fraggle Rock"</p>
@@ -54,7 +54,7 @@
 
          <section id="free-to-be">
             <h3>Free To Be You And Me</h3>
-            <p>In 1972, a hit record and TV special lead to a 1974 hit movie and book of Skits and songs all about encouraging "gender neutrality ...[and] saluting values such as individuality, tolerance, and comfort with one's identity" and overall,"that anyone — whether a boy or a girl — can achieve anything" <cite>(Free to be... you and me, 2023).</cite></p>
+            <p id="p4">In 1972, a hit record and TV special lead to a 1974 hit movie and book of Skits and songs all about encouraging "gender neutrality ...[and] saluting values such as individuality, tolerance, and comfort with one's identity" and overall,"that anyone — whether a boy or a girl — can achieve anything" <cite>(Free to be... you and me, 2023).</cite></p>
             <article class="free-to-be">
                <div>
                   <p>"take my hand, come with me, where the children are free"</p>
@@ -116,8 +116,8 @@
       </article> -->
 
    </body>
-   <footer>
+   <footer class="footer">
       <!-- entity for the copyright symbol (©) is &copy; -->
       <p>LC101 Graded Assignment #4: HTML_Me_Something<br/>© 2023 E. Chassin</p>
-  </footer>
+   </footer>
 </html>
