--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    <body>
       <!-- Write your HTML in this file! -->
       <header id="main-heading"><h1>Cherished Children's Learning Resources</h1></header>
-      <img class="nephews" src="https://www.dropbox.com/s/nomszq58fj8p088/Asher%2BEverett.jpeg?dl=0"><br /><cite>(E. Chassin, 2022)</cite>
+      <a><img src=”https://image-source.here.com” /></a>
+      <a><img class="nephews" src="https://www.dropbox.com/s/nomszq58fj8p088/Asher%2BEverett.jpeg?dl=0"></a><br /><cite>(E. Chassin, 2022)</cite>
 
       <main class="assignment">
          <div id="story" class="story"> 
@@ -18,6 +19,58 @@
             <article class="reading-rainbow">
                <div>
                   <p>"take a look, it's in a book, a Reading Rainbow"</p>
+                  <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+                     <iframe id="player" type="text/html" width="640" height="390"
+                        src="https://www.youtube.com/embed/OAIW5se_cxg"
+                        frameborder="0"></iframe>
+               <div id="player"></div>
+
+    <script>
+      // 2. This code loads the IFrame Player API code asynchronously.
+      let tag = document.createElement('script');
+
+      tag.src = "https://www.youtube.com/iframe_api";
+      let firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      // 3. This function creates an <iframe> (and YouTube player)
+      //    after the API code downloads.
+      let player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '390',
+          width: '640',
+          videoId: 'M7lc1UVf-VE',
+          playerVars: {
+            'playsinline': 1
+          },
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+
+      // 4. The API will call this function when the video player is ready.
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
+
+      // 5. The API calls this function when the player's state changes.
+      //    The function indicates that when playing a video (state=1),
+      //    the player should play for six seconds and then stop.
+      let done = false;
+      function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+          setTimeout(stopVideo, 6000);
+          done = true;
+        }
+      }
+      function stopVideo() {
+        player.stopVideo();
+      }
+    </script>
+
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/OAIW5se_cxg" title="YouTube video player" frameborder="0"></iframe><br>
                   <cite>(Reading rainbow (extended TV series theme song, sung by Tina Fabrique) 2022)</cite>
                </div>
