--- a/index.html
+++ b/index.html
@@ -14,55 +14,64 @@
          <article>
 
             <div id="story" class="story"> 
-               <p id="testP" class="funParagraph">Spending time with my young nephews has brought back memories of my own childhood. This webpage highlights some great (older) content that remains relevent today. I look forward to sharing these four special programs with both of my nephews very soon.</p>
+               <p id="testP" class="funParagraph">Spending time with my young nephews has brought back memories of my own childhood. This webpage highlights some great (older) content that remains relevent today. I look forward to sharing these four special programs with both of my nephews very soon. Behold, the power of Public Broadcasting!</p>
             </div>
             
             <section id="reading-rainbow">
-               <h3>Reading Rainbow</h3>
-                  <p id="p1">A show that debuted in 1983 that used television programming to inspire a love of reading and building a lasting connection between kids and books. The literacy series starred LeVar Burton and each episode focused on a different book/relevent educational theme. A new iteration was launched in 2022, titled Reading Rainbow Live, to inspire generations to come. <cite>(Reading rainbow, 2023)</cite></p>
-               <div class="reading-rainbow">
-                  <p>"take a look, it's in a book, a Reading Rainbow"</p>
+               <h3>READING RAINBOW</h3>
+                  <p id="p1">A show that debuted in 1983 used television programming to inspire a love of reading and building a lasting connection between kids and books. The literacy series starred LeVar Burton and each episode focused on a different book/relevent educational theme. A new iteration was launched in 2022, titled Reading Rainbow Live, to inspire current and future generations. <cite><a href="https://en.wikipedia.org/wiki/Reading_Rainbow" target="_blank">(Reading Rainbow, 2023)</a></cite></p>
+               <div>
+                  <span class="story-title">
+                     <a href="https://www.readingrainbow.org" target=“_blank”>"take a look, it's in a book, a Reading Rainbow"</a>
+                  </span><br>
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/wt7pIN3mFe8" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe><br>
                      <cite>(Reading rainbow (extended TV series theme song, sung by Tina Fabrique) 2022)</cite>
                </div>
             </section>
 
             <section id="zoobilee-zoo">
-               <h3>Zoobilee Zoo</h3>
-                  <p id="p2">Zoobilee Zoo was a TV show that debuted in 1986 about seven animals, the Zoobles, who spent each episode experiencing difficulties and learning moral lessons that apply to young children. The main characters highlighted different areas dealing with: dramatic performing arts, reading and writing, art and painting, music and dance, inventions, imagination and adventures. <cite>(Zoobilee Zoo, 2022)</cite></p>
-               <div class="zoobilee-zoo">
-                  <p>"magic and wonder are waiting for you"</p>
+               <h3>ZOOBILEE ZOO</h3>
+                  <p id="p2">A TV show that debuted in 1986 about seven animals, the Zoobles, who spent each episode experiencing difficulties and learning moral lessons that apply to children. The main characters highlighted different areas dealing with: performing arts, visual arts, vocal and instumental arts, scientific exploration, reading and writing, and using your imagination in general. <cite><a href="https://en.wikipedia.org/wiki/Zoobilee_Zoo" target="_blank">(Zoobilee Zoo, 2022)</a></cite></p>
+               <div>
+                  <span class="story-title">
+                     <a href="https://zoobileezoo.com/" target="_blank">"magic and wonder are waiting for you"</a>
+                  </span><br>
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/oowOsEOTApA" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe><br>
                      <cite>(Zoobilee Zoo theme song (HQ) 2012)</cite>
                </div>
             </section>
 
             <section id="fraggle-rock">
-               <h3>Fraggle Rock</h3>
-                  <p id="p3">An inventive TV program by Jim Henson, that also debuted in 1983, was designed to entertain while encouraging an understanding and embracing of diversity. The show used the Fraggles and musical features as an allegory to deal with serious issues such as prejudice, spirituality, personal identity, the environment, and social conflict. <cite>(Fraggle Rock, 2022 & 2023)</cite></p>
-               <div class="fraggle-rock">
-                  <p>"let the music play, down in Fraggle Rock"</p>
+               <h3>FRAGGLE ROCK</h3>
+                  <p id="p3">A TV program by Jim Henson, that also debuted in 1983, was designed to entertain while encourage an understanding and embracing of diversity. The show used the Fraggles and musical features to tackle issues such as personal identity, prejudice, environmental and social struggles. A new iteration was launched in 2022, titled Fraggle Rock: Back To The Rock, about celebrating our diverse and interrelated world. <cite><a href="https://en.wikipedia.org/wiki/Fraggle_Rock" target="_blank">(Fraggle Rock, 2022 & 2023)</a></cite></p>
+               <div>
+                  <span class="story-title">
+                     <a href="https://www.henson.com/fraggle-rock/" target="_blank">"let the music play, down in Fraggle Rock"</a>
+                  </span><br>
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/KLQS6xo40kI" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe><br>
                      <cite>(Opening theme - fraggle rock - the jim henson company 2013)</cite>
                </div>
             </section>
 
             <section id="free-to-be">
-               <h3>Free To Be You And Me</h3>
-                  <p id="p4">In 1972, a hit record and TV special lead to a 1974 hit movie and book of Skits and songs all about encouraging "gender neutrality ...[and] saluting values such as individuality, tolerance, and comfort with one's identity" and overall,"that anyone — whether a boy or a girl — can achieve anything" <cite>(Free to be... you and me, 2023).</cite></p>
-               <div class="free-to-be">
-                  <p>"take my hand, come with me, where the children are free"</p>
+               <h3>FREE TO BE YOU AND ME</h3>
+                  <p id="p4">In 1972, a hit record and TV special lead to a 1974 book and hit movie of skits and songs. The themes presented were about encouraging "gender neutrality...individuality, tolerance, and comfort with one's identity" <cite><a href="https://en.wikipedia.org/wiki/Free_to_Be..._You_and_Me" target="_blank">(Free to be...you and me, 2023)</a></cite>. They highlighted the "importance of friendship and love", emotional expression, and the freedom to achieve what and who you want to be (The History Of Free To Be You And Me: As remembered by Marlo Thomas, Carole Hart, Stephen Lawrence and Letty Cottin Pogrebin). <cite><a href="https://www.freetobefoundation.com/interview1/" target="_blank">(The History Of Free To Be You And Me: As remembered by Marlo Thomas, Carole Hart, Stephen Lawrence and Letty Cottin Pogrebin)</a></cite></p>
+               <div>
+                  <span class="story-title">
+                     <a href="https://www.freetobefoundation.com/interview1/" target="_blank">"take my hand, come with me, where the children are free"</a>
+                  </span><br>
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/_26FOHoaC78" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media;" allowfullscreen></iframe><br>
                      <cite>(KABC-TV7 (1974) "free to be you &amp; me!" original broadcast!!!! 2021)</cite>
                </div>
             </section>
-  
+
          </article>
       </main>
-
+   
    </body>
-   <footer>
-      <!-- entity for the copyright symbol (©) is &copy; -->
-      <p>LC101 Graded Assignment #4: HTML_Me_Something<br/>&copy; 2023 E. Chassin</p>
-   </footer>
+      <footer>
+         <p>LC101 Graded Assignment #4: HTML_Me_Something<br>&copy; 2023 E. Chassin</p>
+      </footer>
+
+   <!-- </body> -->
 </html>
